Prevent from zooming on mobile

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -543,6 +543,7 @@ input[type="submit"]
     width: 150px
     font-weight: 500
     cursor: pointer
+    border-radius: 0
 
     &:hover
         transform: scale(1.1)
